Update to v3 release

--- a/app/src/main/res/values-es/values-es-grxsettings.xml
+++ b/app/src/main/res/values-es/values-es-grxsettings.xml
@@ -216,6 +216,23 @@
 
     <string name="sb_preferences">Preferencias de iconos, colores, tamaños…</string>
 
+    <string-array name="signal_color_entries">
+        <item>WiFi</item>
+        <item>Flechas WiFi</item>
+        <item>Señal</item>
+        <item>Tipo de datos</item>
+        <item>Flechas de datos</item>
+        <item>Roaming</item>
+        <item>̶M̶o̶d̶o̶ ̶ ̶A̶v̶i̶ó̶n</item>
+        <item>̶V̶p̶n̶</item>
+        <item>̶E̶t̶h̶</item>
+        <item>̶A̶c̶t̶i̶v̶i̶d̶a̶d̶ ̶ ̶e̶t̶h̶</item>
+        <item>̶B̶o̶o̶s̶t̶e̶r̶ ̶ ̶w̶i̶f̶i</item>
+        <item>̶B̶o̶o̶s̶t̶e̶r̶ ̶ ̶m̶o̶b̶i̶l̶e̶</item>
+        <item>̶B̶o̶o̶s̶t̶e̶r̶ ̶ ̶a̶c̶t̶i̶v̶i̶t̶y̶</item>
+        <item>Tinta en fondos blancos</item>
+    </string-array>
+
     <string-array name="agc_reboot_options">
         <item>Power off</item>
         <item>Reboot</item>
@@ -446,6 +463,7 @@
         <item>Centro absoluto (DUAL)</item>
     </string-array>
 
+
     <string-array name="sb_positions_options">
         <item>Izquierda</item>
         <item>Centro</item>
@@ -453,16 +471,43 @@
     </string-array>
 
     <string name="general_info">Información general</string>
-    <string name="features">Características</string>
+    <string name="features">Features</string>
     <string name="changelog">Cambios</string>
 
-    <!-- Changelogs N950F/G95xF -->
-    <string name="changelog_120">Cambios v12</string>
-    <string name="changelog_114">Cambios v11.4</string>
-    <string name="changelog_113">Cambios v11.3</string>
-    <string name="changelog_112">Cambios v11.2</string>
-    <string name="changelog_111">Cambios v11.1</string>
-    <string name="changelog_110">Cambios v11</string>
+    <string-array name="changelog_140">
+        <item>Rebasado sobre N950FXXS5DSD5</item>
+        <item>Actualizado ramdisk N950F</item>
+        <item>Actualizado TW con los mods previos</item>
+        <item>Arreglada app en doble toque en TW</item>
+        <item>Añadidos colores de iconos de señal</item>
+        <item>Añadidos colores de batería y porcentaje</item>
+        <item>Añadida fecha personalizada</item>
+        <item>Añadido fondo personalizado en barra de estado</item>
+        <item>Added barra de estado dual</item>
+        <item>Añadido bluetooth_conectado a la lista de iconos escondidos</item>
+        <item>Añadidos toggles personalizados</item>
+        <item>Añadidos colores de panel (Toggles, iconos, brillo…)</item>
+        <item>Añadido menu de apagado e icono de usuario al panel</item>
+        <item>Añadido DRC al menú de reinicio</item>
+        <item>Añadida opción para usar 1 columna o 2 en menú de reinicio</item>
+        <item>Añadidos toggles DRC/AppLock y VoLTE</item>
+        <item>Reescrito código de menú de reinicio para arreglar pequeños bugs</item>
+    </string-array>
+
+    <string-array name="changelog_130">
+        <item>Rebasado sobre N950FXXS5DSC5</item>
+        <item>Actualizado DeluxeKernel®_v7 N8/S8+/S8</item>
+        <item>Añadido remapeo de inicio/recientes/retroceso</item>
+        <item>Añadido mod pasar canciones con teclas de volumen</item>
+        <item>TouchWiz con 6x6, 7x7, 8x8 y doble toque</item>
+        <item>Opción para máximo de toggles en panel</item>
+        <item>16 escalas de animación en ajustes</item>
+        <item>Actualizados recoverys</item>
+        <item>Reemplazados algunos iconos</item>
+        <item>Arregladas características CSC</item>
+        <item>Añadido bootanimation Deluxe®</item>
+        <item>Mejoras en DRC</item>
+    </string-array>
 
     <string-array name="changelog_120">
         <item>Rebasado sobre N950FXXS5DSC2</item>
@@ -541,12 +586,40 @@
         <item>Basada en primera beta para N950F</item>
     </string-array>
 
+    <string name="changelog_140">Cambios v14</string>
+    <string name="changelog_130">Cambios v13</string>
+    <string name="changelog_120">Cambios v12</string>
+    <string name="changelog_114">Cambios v11.4</string>
+    <string name="changelog_113">Cambios v11.3</string>
+    <string name="changelog_112">Cambios v11.2</string>
+    <string name="changelog_111">Cambios v11.1</string>
+    <string name="changelog_110">Cambios v11</string>
+
     <!-- G93xF changelogs -->
+    <string name="changelog_030">Cambios v3</string>
     <string name="changelog_021">Cambios v2.1</string>
     <string name="changelog_020">Cambios v2</string>
     <string name="changelog_010">Cambios v1</string>
 
+    <string-array name="changelog_030">
+        <item>Actualizado TW con los mods previos</item>
+        <item>Arreglada app en doble toque en TW</item>
+        <item>Añadidos colores de iconos de señal</item>
+        <item>Añadidos colores de batería y porcentaje</item>
+        <item>Añadida fecha personalizada</item>
+        <item>Añadido fondo personalizado en barra de estado</item>
+        <item>Added barra de estado dual</item>
+        <item>Añadido bluetooth_conectado a la lista de iconos escondidos</item>
+        <item>Añadidos toggles personalizados</item>
+        <item>Añadidos colores de panel (Toggles, iconos, brillo…)</item>
+        <item>Añadido menu de apagado e icono de usuario al panel</item>
+        <item>Añadido DRC al menú de reinicio</item>
+        <item>Añadida opción para usar 1 columna o 2 en menú de reinicio</item>
+        <item>Añadidos toggles DRC/AppLock y VoLTE</item>
+        <item>Reescrito código de menú de reinicio para arreglar pequeños bugs</item>
+    </string-array>
     <string-array name="changelog_021">
+        <item>NO PUBLICADA PARA USUARIOS</item>
         <item>Actualizadas apps Gear</item>
         <item>Añadido remapeo inicio/recientes/retroceso</item>
         <item>Añadido pasar canciones con teclas de volumen</item>
