--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,6 +18,8 @@
         <item name="backgroundColor">#00000000</item>
         <item name="seekbarColor">#00000000</item>
 
+        <item name="navbarcolor">#ff000000</item>
+
         <!-- Customize Base theme here. -->
 
         <item name="colorPrimary">#2196F3</item>
@@ -40,7 +42,7 @@
         <item name="pref_category_bg">#00000000</item>
         <item name="seekbar_popup_bg">?colorAccent</item>
         <item name="snackbar_bg">#304553</item>
-        <item name="contrast_text_color">#ffffff</item>
+        <item name="contrast_text_color">#ffffffff</item>
         <item name="prefscreen_arrow_tint">?colorAccent</item>
         <item name="complemnt_accent_color">?colorAccent</item>
         <item name="button_bg_tint">?colorAccent</item>
@@ -90,7 +92,7 @@
         <item name="colorPrimary">#527da3</item>
         <item name="colorPrimaryDark">#426482</item>
         <item name="colorAccent">#2678b6</item>
-        <item name="contrast_text_color">#fafafa</item>
+        <item name="contrast_text_color">#contrast_text_color</item>
         <item name="svn_nav_header_bg">#598fba</item>
         <item name="pref_category_text_color">?colorAccent</item>
         <item name="sublimetheme">@style/SublimeTheme_white_bluegrey</item>
@@ -123,7 +125,7 @@
         <item name="colorPrimary">#212121</item>
         <item name="colorPrimaryDark">#323232</item>
         <item name="colorAccent">#607D8B</item>
-        <item name="contrast_text_color">#fafafa</item>
+        <item name="contrast_text_color">#ffffffff</item>
         <item name="svn_nav_header_bg">#212121</item>
         <item name="pref_category_text_color">#607D8B</item>
         <item name="sublimetheme">@style/SublimeTheme_black_light</item>
@@ -143,6 +145,8 @@
         <item name="complementary_color4">#795548</item>
         <item name="complementary_color5">#FF9800</item>
 
+        <item name="navbarcolor">#ff000000</item>
+
     </style>
 
     <style name="SublimeTheme_black_light" parent="@style/SublimeTheme">
@@ -161,13 +165,15 @@
         <item name="colorPrimary">#ff26A69A</item>
         <item name="colorPrimaryDark">#ff009688</item>
         <item name="colorAccent">#ff4DB6AC</item>
-        <item name="contrast_text_color">#fafafa</item>
+        <item name="contrast_text_color">#ffffffff</item>
         <item name="svn_nav_header_bg">?colorPrimary</item>
         <item name="pref_category_text_color">?colorAccent</item>
         <item name="sublimetheme">@style/SublimeTheme_green_light</item>
         <item name="snackbar_bg">#ff4d8b85</item>
         <item name="toolbartitlecolor">#ffffff</item>
         <item name="toolbarsubtitlecolor">#fafafa</item>
+
+        <item name="navbarcolor">#ff009788</item>
 
         <item name="drawerArrowColor">#ffffffff</item>
         <item name="threedotscolor">#ffffffff</item>
@@ -207,7 +213,7 @@
         <item name="complementary_color4">#009688</item>
         <item name="complementary_color5">#880E4F</item>
 
-
+        <item name="navbarcolor">#ffb93121</item>
 
     </style>
 
@@ -233,6 +239,8 @@
         <item name="checkboxColor">#00000000</item>
         <item name="switchColor">#00000000</item>
         <item name="iconsValueTint">#00000000</item>
+
+        <item name="navbarcolor">#ff000000</item>
 
         <!-- customize theme here -->
         <item name="tabs_text_color">@color/tabs_text_color_dark</item>
@@ -347,6 +355,7 @@
 
         <item name="menucenteredtextcolor">#64B5F6</item>
         <item name="recentscreenstextcolor">#ffffff</item>
+        <item name="contrast_text_color">#fffdfdfd</item>
 
     </style>
 
@@ -358,7 +367,7 @@
         <item name="colorPrimary">#000000</item>
         <item name="colorPrimaryDark">#000000</item>
         <item name="colorAccent">#ff33b5e5</item>
-        <item name="contrast_text_color">#fafafa</item>
+        <item name="contrast_text_color">#ffffffff</item>
         <item name="svn_nav_header_bg">#000000</item>
         <item name="pref_category_text_color">#ff33b5e5</item>
         <item name="sublimetheme">@style/SublimeTheme_black_ics</item>
